fix(front): overlapping text in notification

--- a/front/src/styles/overrides.less
+++ b/front/src/styles/overrides.less
@@ -112,12 +112,13 @@
 }
 
 .ant-notification {
-
+  .ant-notification-notice-content {
+    margin-right: @margin-tiny;
+  }
   .ant-notification-notice-close {
     border: 2px solid @primary-color;
     border-radius: @border-radius-regular;
     padding: 0px @padding-tiny;
-    margin-left: @margin-small;
 
     &:hover {
       border-color: darken(@primary-color, 15%);
